tests/error/tracing_errors/not_callable1.py
from guppylang.decorator import guppy
from guppylang.module import GuppyModule

module = GuppyModule("test")


@guppy.comptime(module)
def test(x: float) -> None:
    x(1)


module.compile()
